tag: 0.2.1. Removed old files.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Henry-V_2253
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Great Britain -- Kings and rulers -- Drama'
 - !lcsh 'Historical drama'
 - !lcc 'PR'
+- GITenberg
 title: Henry V
 url: http://www.gutenberg.org/ebooks/2253
